# CloudflareCMS

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Update.md  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
admin/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.jsonc
admin/public/: _headers
admin/src/: App.tsx  index.css
admin/src/components/: BatchSortSaveBar.tsx  DeleteConfirmModal.tsx  FaqPickerModal.tsx  FeatureGate.tsx  ImageCompressDialog.tsx  ImagePreviewWithRemove.tsx  Layout.tsx  TagInput.tsx  UploadProgressOverlay.tsx
admin/src/hooks/: useFeatureFlags.tsx  useImageUpload.ts
docs/: 00-需求審視與YAGNI分析.md  01-技術架構設計.md  02-數據庫設計.md  03-API接口設計.md  04-核心模塊設計.md  05-靜態生成層對接.md  06-開發計劃.md
migrations/: 0001_init.sql  0002_add_notify_configs.sql  0002_form_submissions.sql  0003_add_api_docs.sql  0003_menu_icons_to_emoji.sql  0004_cleanup_media_from_content.sql  0004_form_submit_token.sql  0004_set_smtp_defaults.sql  0006_multisite.sql  0007_multisite_menu.sql  0013_cleanup_ghost_ext_fields.sql
src/: index.ts  lib.rs
src/model/: mod.rs
src/service/: auth.rs  config.rs  content.rs  mod.rs  sort.rs
src/services/: auth.ts  config.ts  content.ts  extra.ts  flags.ts  forms.ts  model.ts  notify.ts  ratelimit.ts  scheduler.ts  site.ts  sort.ts  storage.ts  system.ts  vectorize.ts
src/util/: jwt.rs  mod.rs  paginate.rs  password.rs  response.rs
src/utils/: datetime.ts  jwt.ts  pagination.ts  password.ts  response.ts  s3sig.ts  sanitize.ts  sitedb.ts
(+34 files in other folders)
