[package]
name = "rust-cms"
version = "0.1.0"
edition = "2021"
authors = ["CMS Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"], default-features = false, optional = true }

[features]
default = ["chrono"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
